// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`item-bank · 문항 검색(search.php) > [BR-01 · BR-03 · BR-12 · BR-19 · BR-20 · BR-27] 키워드 분수 + 태그 계산 + 난이도 정렬(방향 생략) 1`] = `
{
  "count": 10,
  "message": null,
  "rows": [
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-01 · BR-07 · BR-08 · BR-10 · BR-15 · BR-19] 단원 M5-1 + 난이도 3 + 제목 오름차순 1`] = `
{
  "count": 1,
  "message": null,
  "rows": [
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-02 · BR-05 · BR-07 · BR-17 · BR-18] 잘못된 정렬 · 와일드카드 키워드 · 소문자 단원 · 배열 난이도 1`] = `
{
  "count": 1,
  "message": null,
  "rows": [
    {
      "id": 24,
      "level": 5,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분수 덧셈과 뺄셈 혼합 계산",
      "unit": "M5-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-03 · BR-04] 아주 긴 키워드 5000자 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-03 · BR-06] 키워드 한 글자 — 경고 기준 길이 1`] = `
{
  "count": 14,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-03 · BR-07] 공백만 있는 키워드 · 단원 — 앞뒤 공백 제거 뒤 빈 값 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-04] 키워드 100자 — 자르지 않는 최대 길이 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-04] 키워드 101자 — 자르기 · 경고가 시작되는 길이 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-07 · BR-08] 형식은 맞지만 없는 단원 코드 Z9-99 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-09 · BR-10] 난이도 5 명시 — 빈 값일 때 빠지는 난이도 1`] = `
{
  "count": 6,
  "message": null,
  "rows": [
    {
      "id": 24,
      "level": 5,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분수 덧셈과 뺄셈 혼합 계산",
      "unit": "M5-1",
    },
    {
      "id": 25,
      "level": 5,
      "tags": [
        "문장제",
        "서술형",
      ],
      "title": "분수의 곱셈 서술형",
      "unit": "M5-2",
    },
    {
      "id": 26,
      "level": 5,
      "tags": [
        "서술형",
      ],
      "title": "소수 곱셈의 추론",
      "unit": "M5-3",
    },
    {
      "id": 27,
      "level": 5,
      "tags": [
        "개념",
        "서술형",
      ],
      "title": "분수 나눗셈의 원리",
      "unit": "M6-1",
    },
    {
      "id": 28,
      "level": 5,
      "tags": [
        "문장제",
        "오답률높음",
        "서술형",
      ],
      "title": "비율 문제 종합",
      "unit": "M6-2",
    },
    {
      "id": 29,
      "level": 5,
      "tags": [
        "계산",
      ],
      "title": "대분수의 나눗셈",
      "unit": "M6-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-09 · BR-15 · BR-16 · BR-23] 조건 없음 — 기본 필터 · 기본 정렬 · 첫 페이지 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-09 · BR-16 · BR-18 · BR-24] 모든 파라미터 빈 값 — 파라미터 없음과 같은지 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-11 · BR-24] 음수 페이지 · 음수 난이도 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-11] 숫자가 아닌 난이도 abc 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-11] 앞자리 0이 붙은 난이도 05 1`] = `
{
  "count": 6,
  "message": null,
  "rows": [
    {
      "id": 24,
      "level": 5,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분수 덧셈과 뺄셈 혼합 계산",
      "unit": "M5-1",
    },
    {
      "id": 25,
      "level": 5,
      "tags": [
        "문장제",
        "서술형",
      ],
      "title": "분수의 곱셈 서술형",
      "unit": "M5-2",
    },
    {
      "id": 26,
      "level": 5,
      "tags": [
        "서술형",
      ],
      "title": "소수 곱셈의 추론",
      "unit": "M5-3",
    },
    {
      "id": 27,
      "level": 5,
      "tags": [
        "개념",
        "서술형",
      ],
      "title": "분수 나눗셈의 원리",
      "unit": "M6-1",
    },
    {
      "id": 28,
      "level": 5,
      "tags": [
        "문장제",
        "오답률높음",
        "서술형",
      ],
      "title": "비율 문제 종합",
      "unit": "M6-2",
    },
    {
      "id": 29,
      "level": 5,
      "tags": [
        "계산",
      ],
      "title": "대분수의 나눗셈",
      "unit": "M6-1",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-13 · BR-14] 태그 51자 — 자르기 기준 50자를 넘는 미등록 태그 1`] = `
{
  "count": 0,
  "message": "검색 결과가 없습니다",
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-23 · BR-24] 2페이지 — 총 건수가 페이지 크기(20)와 같을 때 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-24] 페이지 0 — 경고 없이 1로 바꾸는 값 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [
    {
      "id": 18,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 뺄셈 문장제",
      "unit": "M5-1",
    },
    {
      "id": 19,
      "level": 4,
      "tags": [
        "계산",
      ],
      "title": "세 분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 20,
      "level": 4,
      "tags": [
        "문장제",
        "도형",
      ],
      "title": "소수 곱셈 문장제",
      "unit": "M5-3",
    },
    {
      "id": 21,
      "level": 4,
      "tags": [
        "문장제",
        "오답률높음",
      ],
      "title": "분수의 나눗셈 문장제",
      "unit": "M6-1",
    },
    {
      "id": 22,
      "level": 4,
      "tags": [
        "개념",
      ],
      "title": "비례식의 성질",
      "unit": "M6-2",
    },
    {
      "id": 12,
      "level": 3,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "대분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 13,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "대분수의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 14,
      "level": 3,
      "tags": [
        "계산",
      ],
      "title": "소수끼리의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 15,
      "level": 3,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "자연수를 분수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 16,
      "level": 3,
      "tags": [
        "문장제",
      ],
      "title": "백분율 구하기",
      "unit": "M6-2",
    },
    {
      "id": 6,
      "level": 2,
      "tags": [
        "계산",
        "오답률높음",
      ],
      "title": "분모가 다른 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 7,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "소수와 자연수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 8,
      "level": 2,
      "tags": [
        "개념",
      ],
      "title": "비율을 분수로 나타내기",
      "unit": "M6-2",
    },
    {
      "id": 9,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "분수를 자연수로 나누기",
      "unit": "M6-1",
    },
    {
      "id": 10,
      "level": 2,
      "tags": [
        "계산",
      ],
      "title": "진분수끼리의 곱셈",
      "unit": "M5-2",
    },
    {
      "id": 1,
      "level": 1,
      "tags": [
        "계산",
        "개념",
      ],
      "title": "분모가 같은 분수의 덧셈",
      "unit": "M5-1",
    },
    {
      "id": 2,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분모가 같은 분수의 뺄셈",
      "unit": "M5-1",
    },
    {
      "id": 3,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "소수 한 자리 수의 곱셈",
      "unit": "M5-3",
    },
    {
      "id": 4,
      "level": 1,
      "tags": [
        "개념",
      ],
      "title": "비의 뜻",
      "unit": "M6-2",
    },
    {
      "id": 5,
      "level": 1,
      "tags": [
        "계산",
      ],
      "title": "분수와 자연수의 곱셈",
      "unit": "M5-2",
    },
  ],
  "status": 200,
}
`;

exports[`item-bank · 문항 검색(search.php) > [BR-24] 페이지 1000 — 상한 999를 넘는 값 1`] = `
{
  "count": 20,
  "message": null,
  "rows": [],
  "status": 200,
}
`;
